examples/test/testpolicy10798.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10798
  namespace: namespace1
spec:
  podSelector:
    matchLabels:
      key37: value10
      key48: value31
      key49: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value10
          key39: value24
          key44: value19
      podSelector:
        matchLabels:
          key42: value48
          key8: value10
          key14: value44
